--- a/styles.css
+++ b/styles.css
@@ -268,25 +268,29 @@ body {
 
 }
 .nemnogoonas {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+    display: flex;
+    flex-direction: row;
     min-height: 100vh;
     max-width: 1200px;
     margin: 0 auto;
     padding: 2rem;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
     gap: 4rem;
+    justify-content: center;
     align-items: center;
-    min-height: 100vh;
 }
 
+@media (max-width: 1024px) {
+    .nemnogoonas {
+        flex-direction: column;
+    }
+}
 .textik {
     padding: 4rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
     background: #000;
+    margin-bottom: 1.5rem;
 }
 
 .small-header {
